[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Projectile/Sword.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Projectile/Assets/Sword/sword2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Projectile/Assets/Sword/sword1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Projectile/Assets/Sword/sword6.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Projectile/Assets/Sword/sword5.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Projectile/Assets/Sword/sword4.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Projectile/Assets/Sword/sword3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": false,
"name": "attack",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.4953
height = 111.554

[node name="Sword" type="Area2D" groups=[
"projectile",
]]
collision_layer = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"
frame = 5
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sword_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
